# foxnio

./: ALIGNMENT_REPORT.md  CHANGELOG.md  FINAL_REPORT.md  OPTIMIZATION_EXECUTION_REPORT.md  OPTIMIZATION_REPORT_FINAL.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS_FINAL.md  README.md  config.example.yaml  grafana-dashboard.json  optimize_and_deploy.sh
.openclaw/: workspace-state.json
backend/: .env.example  Cargo.toml  audit.toml  run_tests.sh  run_unit_tests.sh
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240327_000002_create_accounts.rs  m20240327_000008_create_alert_rules.rs  m20240327_000009_create_alert_history.rs  m20240327_000010_create_alert_channels.rs  m20240328_000011_create_groups.rs  m20240328_000012_create_model_configs.rs  m20240328_000013_create_tls_fingerprint_profiles.rs  m20240328_000014_create_announcements.rs  m20240328_000015_create_promo_codes.rs  m20240328_000016_create_user_attributes.rs  m20240328_000017_create_error_passthrough_rules.rs  m20240328_000018_create_scheduled_test_plans.rs  m20240328_000019_create_proxies.rs  m20240328_000020_create_redeem_codes.rs  m20240328_000021_create_quota_usage_history.rs  m20240328_000022_create_subscriptions.rs  m20240329_000023_add_supported_model_scopes.rs  m20240330_000024_add_api_key_permissions.rs  m20240330_000026_create_webhook_endpoints.rs  m20240330_000027_create_webhook_deliveries.rs  m20240401_000028_add_performance_indexes.rs
docs/: API_REFERENCE.md  CLAUDE_CODE_WASM_ANALYSIS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURE_ALIGNMENT.md  FINAL_DELIVERY.md  (+8 more)
(+403 files in other folders)
